argocd/applications/media/cleanuparr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cleanuparr
  namespace: prod-media
  labels:
    app.kubernetes.io/name: cleanuparr
    app.kubernetes.io/instance: cleanuparr
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: cleanuparr
    app.kubernetes.io/instance: cleanuparr
  ports:
    - name: http
      port: 11011
      targetPort: http
      protocol: TCP
