argocd/applications/media/cleanuparr/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cleanuparr
  namespace: prod-media
  labels:
    app.kubernetes.io/name: cleanuparr
    app.kubernetes.io/instance: cleanuparr
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`cleanuparr.st0rmingbr4in.com`) && PathPrefix(`/outpost.goauthentik.io`)
      priority: 100
      services:
        - name: ak-outpost-authentik-embedded-outpost
          namespace: prod-infra
          port: 9000
    - kind: Rule
      match: Host(`cleanuparr.st0rmingbr4in.com`)
      priority: 10
      middlewares:
        - name: authentik-forward-auth
          namespace: prod-infra
      services:
        - name: cleanuparr
          port: 11011
